--- a/tmux.org
+++ b/tmux.org
@@ -7,12 +7,19 @@
 tmux ls
 #+END_SRC
 
+
 * Create a tmux session with a name
   so you can reference the session later by name
   You can have a tmux session open for each jail or to perform a task 
   that won't die when you disconnect
 #+BEGIN_SRC sh
-tmux -s <session_name>  
+tmux new -s <session_name>  
+#+END_SRC
+
+
+* Connect to an existing tmux session
+#+BEGIN_SRC sh
+tmux -s <session_name>
 #+END_SRC
 
 
