--- a/index.org
+++ b/index.org
@@ -1,6 +1,13 @@
-#+SETUPFILE: /Users/kbusi/Devel/org-html-themes/setup/theme-readtheorg.setup
+#+SETUPFILE: /Users/kbusi/devel/org-html-themes/setup/theme-readtheorg.setup
 #+TITLE: Notes
 
-- Beware, most of these are system administration/reference notes
+-----
 
-[[file:tmux.org][tmux]]
+- Beware, most of these are system administration/reference notes
+-----
+
+- [[file:how-to-create-this-site.org]]
+
+
+- [[file:tmux.org][tmux]]
+
