--- a/tmux.org
+++ b/tmux.org
@@ -1,8 +1,8 @@
 #+SETUPFILE: /Users/kbusi/Devel/org-html-themes/setup/theme-readtheorg.setup
 #+TITLE: Tmux
+-----
 
-
-* Check for existing tmux sessions
+* List existing tmux sessions
 #+BEGIN_SRC sh
 tmux ls
 #+END_SRC
@@ -19,12 +19,11 @@ tmux new -s <session_name>
 
 * Connect to an existing tmux session
 #+BEGIN_SRC sh
-tmux -s <session_name>
+tmux attach-sesson -t <session_name>
 #+END_SRC
 
 
-* Disconnect from an existing tmux session without closing it
-  
+* Detach from an existing tmux session without closing it
 #+BEGIN_SRC sh
 C-b d
 #+END_SRC
