--- a/design.org
+++ b/design.org
@@ -41,6 +41,22 @@ Design for non designers
 - [[https://dribbble.com/shots/1999119-Intelworks-Greyscale-mocks][Grey scale mockups]]
 
 
+* Colors
+
+** Cheat Sheet
+   - Red: Passion, Love, Anger
+   - Orange: Energy, Happiness, Vitality
+   - Yellow: Happiness, Hope, Deceit
+   - Green: New Beginnings, Abundance, Nature
+   - Blue: Calm, Responsible, Sadness
+   - Purple: Creativity, Royalty, Wealth
+   - Black: Mystery, Elegance, Evil
+   - Gray: Moody, Conservative, Formality
+   - White: Purity, Cleanliness, Virtue
+   - Brown: Nature, Wholesomeness, Dependability
+   - Tan or Beige: Conservative, Piety, Dull
+   - Cream or Ivory: Calm, Elegant, Purity
+
 * Business side of design
 
 - https://creativeclass.io/
